# HiDEM

./: .gitignore  CHANGELOG  CMakeLists.txt  HIDEM_STARTINFO  README.md  VtuToHiDEM.py  amat.f  ave.f  ave2.f  ave3.f  bipint.f90  circ.f  circ.f90  clean.sh  comp.txt  comp_f90.txt  comp_lappy.txt  compile.sh  compile_Mahti.sh  compile_cray.sh  compile_ubuntu.sh  crackt.f90  dist.f  dist.f90  dt.f  dt.f90  effload.f  effload.f90  effload1.f  effload2.f  effload3.f  fcc.f90  fix_hidemformat.py  glas.f90  io.f90  joe.job  kmat.f  melange_strain.py  my_rh.py  ranmar.f  (+9 more)
.github/ISSUE_TEMPLATE/: hidem-issue.md
HiDEM/: Strain.py  Vtu.py
libs/metis-5.1.0/: CMakeLists.txt  CMakeLists.txt~
python/HiDEM/: Geom.py  Strain.py  Vtu.py  show_geom.py
scripts/: ave.f  broken_bonds.py  clean.sh  fix_hidemformat.py  my_rh2.py  rc2.f90  rt.f90
scripts/analysis/: ave2.f  aves.f  broken_bonds.py  cluster.py  my_rh.py  my_rh2.py  plot_energy.py  rc.f90  rc3.f90  rcrack.f90  rfr.f90  rfrag.f  rh.f  rh.py  rh2.f
scripts/compilation/: compile_cray.sh  compile_ubuntu.sh
scripts/io/: bin_to_csv.py  binstr_to_csv.py  rbed.f
scripts/job_scripts/: example.job  valgrind_example.sh
scripts/paraview/: HiDEM_load.py  HiDEM_load_legacyfmt.py
scripts/toolchains/: HiDEM-Mahti.cmake  HiDEM-cray.cmake  HiDEM-ubuntu.cmake
src/: CMakeLists.txt  amat.f  bipint.f90  circ.f90  crackt.f90  dist.f90  dt.f90  effload.f90  glas.f90  io.f90  kmat.f  melange.f90  octree.F90  ranmar.f  ttmat.f90  typedefs.f90  utils.f90  wave2.F90  wave2.f90
test/: HiDEM  batchHiDEM.sh  example.job
test/Results/: HiDEM_test_dtop00  HiDEM_test_dtop01  HiDEM_test_dtopr  HiDEM_test_kins2
test/work/: HiDEM_test_FS0000  HiDEM_test_FS0001  HiDEM_test_FS0002  HiDEM_test_FS0003  HiDEM_test_FS0004  HiDEM_test_FS0005  HiDEM_test_FS0006  HiDEM_test_FS0007  HiDEM_test_FS0008  HiDEM_test_FS0009  HiDEM_test_FS0010  HiDEM_test_FS0011  HiDEM_test_FS0012  HiDEM_test_FS0013  HiDEM_test_FS0014  HiDEM_test_FS0015  HiDEM_test_FS0016  HiDEM_test_FS0017  HiDEM_test_FS0018  HiDEM_test_FS0019  HiDEM_test_FS0020  HiDEM_test_FS0021  HiDEM_test_FS0022  HiDEM_test_FS0023  HiDEM_test_FS0024  (+728 more)
